syntax = "proto3";

package proto;
option go_package = "./../rpc-test-server/pb";

service TestServer {
  rpc TestSeyHello(ReqTestSeyHello) returns (RplTestSeyHello);
  rpc TestBdUserCreate(ReqTestDbUserCreate) returns (RplTestServer);
}

message RplTestServer {}

message ReqTestSeyHello {
  string Name = 1;
}

message RplTestSeyHello {
  string Message = 2;
}

message ReqTestDbUserCreate {
  string NickName = 1;
  string Login = 2;
  string Password = 3;
}
